@@ -1,3 +1,8 @@
+2002-09-10  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=76419
+	* gnome-ui-properties.glade : tweak layout slightly
+
 2002-08-23  Jody Goldberg <jody@gnome.org>
 
 	* gnome-ui-properties.glade : Priority text was a bonobo-ism.
